<resources>
    <string name="app_name">Simano</string>
    <string name="server">Server</string>
    <string name="server_format">%1$s:%2$d</string>
    <string name="new_mail">You have new mails.</string>
    <string name="no_mail">You have no mail.</string>
    
    <string name="server_settings">Server Settings</string>
    <string name="hostname_title">Hostname</string>
    <string name="hostname_summary">Server\'s hostname</string>
    <string name="port_title">Port Number</string>
    <string name="port_summary">Server\'s port number</string>
    <string name="use_ipv4_only_title">Use IPv4 Only</string>
    <string name="use_ipv4_only_summary">Use IPv4 only to connect to the server.</string>

    <string name="app_connecting">Connecting</string>
    <string name="app_ready">Ready</string>
    <string name="app_closing">Closing</string>
    <string name="app_sleep">Sleep</string>
    <string name="app_finish">Finished</string>
</resources>
