<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

  <PreferenceCategory
      android:key="server_settings"
      android:title="@string/server_settings">

    <EditTextPreference
	android:key="hostname"
	android:title="@string/hostname_title"
	android:summary="@string/hostname_summary"
	android:dialogTitle="@string/hostname_title"
	android:inputType="text"
	android:defaultValue="localhost" />
    
    <EditTextPreference
	android:key="port"
	android:title="@string/port_title"
	android:summary="@string/port_summary"
	android:dialogTitle="@string/port_title"
	android:inputType="number"
	android:maxLength="5"
	android:defaultValue="0" />
    
  </PreferenceCategory>

</PreferenceScreen>
